Refactor GoogleCloudStorageHttpClient to use java.net.http.HttpClient
Migrated from HttpURLConnection to Java 11 HttpClient.
Added unit test GoogleCloudStorageHttpClientTest.
Updated exception handling to preserve existing behavior.

Co-authored-by: Periecle <26135126+Periecle@users.noreply.github.com>